--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(kissfft REQUIRED)
 find_package(Freetype REQUIRED)
 ENDIF()
 find_package(RtAudio REQUIRED)
+find_package(PNG REQUIRED)
 
 
 add_compile_definitions(_USE_MATH_DEFINES)
@@ -24,7 +25,7 @@ add_executable(glfilebrowser main.cpp)
 include_directories( ${OpenCV_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS} )
 
 IF (WIN32)
-target_link_libraries(glfilebrowser ${X11_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${OpenCV_LIBS} ${FREETYPE_LIBRARIES} glfw RtAudio::rtaudio unofficial::kissfft::kissfft)
+target_link_libraries(glfilebrowser ${X11_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${OpenCV_LIBS} ${PNG_LIBRARIES} ${FREETYPE_LIBRARIES} glfw RtAudio::rtaudio unofficial::kissfft::kissfft)
 ELSE()
-target_link_libraries(glfilebrowser ${X11_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${OpenCV_LIBS} ${FREETYPE_LIBRARIES} glfw RtAudio::rtaudio "/usr/lib/x86_64-linux-gnu/libkissfft-float.so.131.1.0")
+target_link_libraries(glfilebrowser ${X11_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${OpenCV_LIBS} ${PNG_LIBRARIES} ${FREETYPE_LIBRARIES} m glfw RtAudio::rtaudio "/usr/lib/x86_64-linux-gnu/libkissfft-float.so.131.1.0")
 ENDIF()
